# lizard101-initial-submission

./: README.md
lizard101/: .gitignore  CMakeLists.txt  README.md
lizard101/media/: desktop.ini  media.md
lizard101/media/cards/: desktop.ini
lizard101/src/: Input.cpp  Input.h  JobSystem.cpp  JobSystem.hpp  SharedData.hpp  ThreadExample.cpp  Timeline.cpp  Timeline.h  client.cpp  entity.cpp  entity.h  entityManager.cpp  entityManager.h  main.cpp  main.h  physics.cpp  physics.h  server.cpp
lizard101/src/ecs/: Component.cpp  Component.h  ComponentType.h  Tag.h
lizard101/src/events/: CollisionHandler.h  DeathHandler.h  Event.h  EventHandler.h  EventManager.cpp  EventManager.h  InputHandler.h  SpawnHandler.h
lizard101/src/game/: Camera.h  Lizard101Controller.cpp  Lizard101Controller.h  Lizard101Core.cpp  Lizard101Core.h  PauseButton.cpp  PauseButton.h  Player.cpp  Player.h  Spikes.cpp  Spikes.h  gameHeaders.h  movingPlatform.cpp  movingPlatform.h  stationaryPlatform.cpp  stationaryPlatform.h
lizard101/src/game/components/: BoxCollider.h  DeathZones.h  DebugRenderer.h  Health.h  RigidBody.h  ScreenAnchor.h  SideScroll.h  SpawnPoint.h  TextureRenderer.h  TouchDamage.h
